Mostly developing the changeCrossoverMutationProbability method